# ffkiro

./: README.md
firefighter_flipper/: CMakeLists.txt  package.xml
firefighter_flipper/include/firefighter_flipper/: FirefighterControl.hpp  Robotics.hpp
firefighter_flipper/src/: FirefighterControl.cpp  Robotics.cpp  flipper_attitude_control.cpp  flipper_positions_node.cpp  flipper_velocity_integrator.py  robotics_test.cpp
firefighter_interfaces/: CMakeLists.txt
firefighter_interfaces/msg/: FlipperAngle.msg  FlipperCommand.msg  FlipperPositions.msg
postech_flipper_msgs/: CMakeLists.txt  package.xml
postech_flipper_msgs/msg/: FlipperVelocityCommand.msg
