<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firefighter_flipper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tlatmdgus19589@naver.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav_msgs</depend>          <!-- ✅ 추가 -->
  <depend>Eigen3</depend>            <!-- ✅ 권장: eigen3_cmake_module와 함께 명시 -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>firefighter_interfaces</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
